recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:16: error: not found: value snowSlide
    return snowSlide(levels-1,length/3.0)
           ^Koch:16: warning: enclosing method snowSide has result type Unit: return value discarded
    return snowSlide(levels-1,length/3.0)
    ^